Fixed crash using Java 9 and a profile bug